# ulaval-generateur-horaire

./: .gitignore  CLAUDE.md  CONCEPTION.md  Cargo.toml  PLAN_LIVRABLE.md  README.md  makefile  next_steps.md  plan.md  project_plan.md
conception_docs/adr/: 2026-07-cas-de-test-listing-facette-gex.md  2026-07-decoupage-en-versions-v0-v1-v2.md
crates/core/: Cargo.toml
crates/core/src/: catalogue.rs  common.rs  course.rs  lib.rs  program.rs
crates/core/tests/integration/: catalogue.rs  course.rs  main.rs  program.rs
crates/core/tests/unit/: course.rs  main.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: catalogue.rs  cli.rs  course.rs  fetch.rs  lib.rs  main.rs  print.rs  program.rs
crates/scraper/src/parser/: catalogue.rs  course.rs  listing.rs  mod.rs  program.rs
crates/scraper/tests/integration/: catalogue.rs  cli.rs  course.rs  fetch.rs  listing.rs  main.rs  program.rs
crates/ui/: Cargo.toml  Dioxus.toml
crates/ui/src/: main.rs
data/: catalogue.json
data/cours/: a2009.json  a2010.json  a2011.json  a2012.json  a2013.json  a2014.json  a2015.json  a2016.json  a2017.json  a2018.json  a2019.json  a2020.json  a2021.json  a2022.json  a2023.json  a2024.json  a2025.json  a2026.json  e2010.json  e2013.json  e2014.json  e2015.json  e2016.json  e2018.json  e2019.json  e2020.json  e2021.json  e2022.json  e2023.json  e2024.json  e2025.json  e2026.json  h2011.json  h2012.json  h2013.json  h2014.json  h2015.json  h2016.json  h2017.json  h2018.json  (+8 more)
data/programmes/: baccalaureat-en-anthropologie.json  baccalaureat-en-genie-civil.json  baccalaureat-en-genie-industriel.json  baccalaureat-en-genie-mecanique.json  baccalaureat-en-genie-physique.json
docs/: next_steps.md  project_plan.md
docs/conception/: solveur-conception.md
docs/conception/adr/: 2026-07-adoption-de-clap.md  2026-07-affichage-cli-scraper.md  2026-07-b-enumere-toutes-les-solutions.md  2026-07-b-placement-par-satisfaction-fait-main.md  2026-07-blocs-de-la-page-programme.md  2026-07-bornes-de-credits-toutes-retirees.md  2026-07-cache-de-cours-parses.md  2026-07-cache-du-verdict-hors-perimetre.md  2026-07-cas-de-test-catalogue-facette-gex.md  2026-07-cas-de-test-listing-facette-gex.md  2026-07-catalogue-artefact-commite.md  2026-07-catalogue-teste-sur-html-gele.md  2026-07-cheminement-type-en-fichier-manuel.md  2026-07-cli-dans-la-lib-et-style-derreurs.md  2026-07-code-en-anglais-domaine-en-francais.md  2026-07-conception-du-fetcher.md  2026-07-conception-du-parseur-de-cours.md  2026-07-contrainte-de-regle-optionnelle.md  2026-07-contribution-de-cours-manuels.md  2026-07-cours-dappoint-hors-perimetre.md  2026-07-cours-dappoint-reintegres.md  2026-07-cours-obligatoires-de-concentration.md  2026-07-cours-par-session-et-annee.md  2026-07-cours-sans-carte-de-credits.md  2026-07-couverture-100-et-frontiere-io.md  2026-07-couverture-par-instanciation-le-plus-petit-ecart.md  2026-07-credits-exiges-bornes-au-premier-cycle.md  2026-07-credits-exiges-sans-programme.md  2026-07-credits-variables-en-enum.md  2026-07-cycle-preuniversitaire-cours-seulement.md  2026-07-cycles-hors-perimetre-sans-erreur.md  2026-07-decoupage-en-versions-v0-v1-v2.md  2026-07-echec-de-page-cours-non-bloquant.md  2026-07-echec-de-page-programme-non-bloquant.md  2026-07-exigence-linguistique-champ-dedie.md  (+35 more)
(+70 files in other folders)
