[workspace]
resolver = "2"
members = ["crates/core", "crates/scraper", "crates/ui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Antoine Lefebvre-Brossard <antoinelb@proton.me>"]

[workspace.dependencies]
ulaval-scheduler-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
non_upper_case_globals = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[workspace.lints.clippy]
manual_range_contains = "allow"
