[package]
name = "ulaval-scheduler-scraper"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "scraper"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ulaval-scheduler-core = { workspace = true }
serde = { workspace = true }
scraper = "0.27.0"
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
