[package]
name = "ulaval-scheduler-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
ulaval-scheduler-core = { workspace = true }
dioxus = { version = "0.7.1", features = ["router"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
