[package]
name = "ulaval-scheduler-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
ulaval-scheduler-core = { workspace = true }
anyhow = { version = "1" }
dioxus = { version = "0.7.1", features = ["router"] }
serde = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
